[gd_scene load_steps=23 format=3 uid="uid://c4nh5ikljookn"]

[ext_resource type="Script" path="res://BrainVisualizer/UI/Windows/Quick_Cortical_Menu/QuickCorticalMenu.gd" id="1_8td17"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="2_iacyx"]
[ext_resource type="Texture2D" uid="uid://cas8w6tbsvf0l" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_S.png" id="3_1l638"]
[ext_resource type="Texture2D" uid="uid://c7titv7o7iu41" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_C.png" id="4_t0ut2"]
[ext_resource type="Texture2D" uid="uid://bs4u3x8y64aic" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_H.png" id="5_f2xq8"]
[ext_resource type="Texture2D" uid="uid://b32s4sgq2hx1v" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_D.png" id="6_evlmv"]
[ext_resource type="Texture2D" uid="uid://c2dffcs2kv03x" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Quick_connect_S.png" id="7_aaec5"]
[ext_resource type="Texture2D" uid="uid://citjc28nshych" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Quick_connect_H.png" id="9_8220t"]
[ext_resource type="Texture2D" uid="uid://8q1ac1u70yrj" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Quick_connect_C.png" id="10_apr2r"]
[ext_resource type="Texture2D" uid="uid://bn7md8hhhbwge" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Quick_connect_D.png" id="10_op4fb"]
[ext_resource type="Texture2D" uid="uid://diblnvtxqfa70" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/add-to-region_S.png" id="11_60rj6"]
[ext_resource type="Texture2D" uid="uid://d1k3sn8mfuya7" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/copy_cortical_area_S.png" id="11_hl6lb"]
[ext_resource type="Texture2D" uid="uid://b8fnvawra5ikg" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/copy_cortical_area_C.png" id="12_daddx"]
[ext_resource type="Texture2D" uid="uid://ceyxh5hrqm3v7" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/add-to-region_C.png" id="12_j7irs"]
[ext_resource type="Texture2D" uid="uid://bovp43qb5nd5r" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/copy_cortical_area_H.png" id="13_2u3te"]
[ext_resource type="Texture2D" uid="uid://njjvlcn1tkef" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/add-to-region_H.png" id="13_tbiqk"]
[ext_resource type="Texture2D" uid="uid://bchi6p8u43oyl" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/add-to-region_D.png" id="14_03052"]
[ext_resource type="Texture2D" uid="uid://3td2dny3y65m" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/copy_cortical_area_D.png" id="14_acjss"]
[ext_resource type="Texture2D" uid="uid://cvipwuuo2wa4i" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_S.png" id="15_e2qrx"]
[ext_resource type="Texture2D" uid="uid://bo26ji1fksorf" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_C.png" id="16_alv5k"]
[ext_resource type="Texture2D" uid="uid://c2uogfrcw4gbq" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_H.png" id="17_l48r7"]
[ext_resource type="Texture2D" uid="uid://b2nlag14kcmcs" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_D.png" id="18_7ekap"]

[node name="QuickCorticalMenu" type="VBoxContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_8td17")

[node name="TitleBar" parent="." instance=ExtResource("2_iacyx")]
layout_mode = 2
title = "CORTICAL_NAME"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_type_variation = &"MarginContainer_WindowBorder"

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
alignment = 1

[node name="Details" type="TextureButton" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "View Cortical Area Details"
focus_mode = 0
theme_type_variation = &"TextureButton_Big"
texture_normal = ExtResource("3_1l638")
texture_pressed = ExtResource("4_t0ut2")
texture_hover = ExtResource("5_f2xq8")
texture_disabled = ExtResource("6_evlmv")
ignore_texture_size = true
stretch_mode = 5

[node name="QuickConnect" type="TextureButton" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Connect Cortical Area Towards..."
focus_mode = 0
theme_type_variation = &"TextureButton_Big"
texture_normal = ExtResource("7_aaec5")
texture_pressed = ExtResource("10_apr2r")
texture_hover = ExtResource("9_8220t")
texture_disabled = ExtResource("10_op4fb")
ignore_texture_size = true
stretch_mode = 5
flip_v = true

[node name="AddToNewRegion" type="TextureButton" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Add to a new region..."
focus_mode = 0
theme_type_variation = &"TextureButton_Big"
texture_normal = ExtResource("11_60rj6")
texture_pressed = ExtResource("12_j7irs")
texture_hover = ExtResource("13_tbiqk")
texture_disabled = ExtResource("14_03052")
ignore_texture_size = true
stretch_mode = 5

[node name="Clone" type="TextureButton" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Clone Cortical Area..."
focus_mode = 0
theme_type_variation = &"TextureButton_Big"
texture_normal = ExtResource("11_hl6lb")
texture_pressed = ExtResource("12_daddx")
texture_hover = ExtResource("13_2u3te")
texture_disabled = ExtResource("14_acjss")
ignore_texture_size = true
stretch_mode = 5

[node name="Delete" type="TextureButton" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Delete this Cortical Area..."
focus_mode = 0
theme_type_variation = &"TextureButton_Big"
texture_normal = ExtResource("15_e2qrx")
texture_pressed = ExtResource("16_alv5k")
texture_hover = ExtResource("17_l48r7")
texture_disabled = ExtResource("18_7ekap")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer/Details" to="." method="_button_details"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer/QuickConnect" to="." method="_button_quick_connect"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer/AddToNewRegion" to="." method="_button_add_to_new_region"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer/Clone" to="." method="_button_clone"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer/Delete" to="." method="_button_delete"]
